# claude-rail-service-analytics

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: pipeline-reviewer.md  prompt-engineer.md
.claude/hooks/: block-secrets.sh  lint-python.sh
.claude/skills/databricks-pipeline/: SKILL.md
.claude/skills/maintenance-rag/: SKILL.md
.claude/skills/prompt-eval/: SKILL.md
catalog_mcp/telematics_catalog/: server.py
data/: README.md
data/sample/: maintenance_bulletins.json  telematics_events.csv
docs/: demo-walkthrough.md
evals/: golden_set.json  prompt_eval.py
src/llm/: maintenance_copilot.py  schemas.py
src/pipelines/: bronze_ingest.py  gold_service_metrics.py  paths.py  run_all.py  silver_transform.py
tests/: test_pipelines.py
